--- a/src/Web/WebSPA/ClientApp/src/assets/i18n/en.json
+++ b/src/Web/WebSPA/ClientApp/src/assets/i18n/en.json
@@ -28,5 +28,7 @@
     "Pending Task" : "Pending Task",
     "In queue" : "In queue",
     "Mail" : "Mail",
-    "View All" : "View All"
+    "View All" : "View All",
+    "Server" : "Server",
+    "Servers" : "Servers"
 }
