--- a/src/Web/WebSPA/ClientApp/src/assets/i18n/fr.json
+++ b/src/Web/WebSPA/ClientApp/src/assets/i18n/fr.json
@@ -28,5 +28,7 @@
     "Pending Task" : "Tâche en attente",
     "In queue" : "Dans la queue",
     "Mail" : "Courrier",
-    "View All" : "Voir tout"
+    "View All" : "Voir tout",
+    "Server" : "Serveur",
+    "Servers" : "Serveurs"
 }
