Correction langue francaise + popup aligné à droite.

--- a/src/Web/WebSPA/ClientApp/src/assets/i18n/fr.json
+++ b/src/Web/WebSPA/ClientApp/src/assets/i18n/fr.json
@@ -15,7 +15,7 @@
     "English": "Anglais",
     "French": "Français",
     "Urdu": "Ourdou",
-    "Spanish": "Spanish",
+    "Spanish": "Espagnol",
     "Italian": "Italien",
     "Farsi": "Farsi",
     "German": "Allemand",
